samples/_failures_safe/1761362668_71beee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dfe00a7.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_8dfe00a7.c:151:30: error: expected ‘)’ at end of input
  151 |         parser_advance(parser
      |                       ~      ^
      |                              )
./samples/SAFE/__tmp_8dfe00a7.c:151:9: error: expected declaration or statement at end of input
  151 |         parser_advance(parser
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8dfe00a7.c:151:9: error: expected declaration or statement at end of input
